# manga-converter

./: Cargo.toml  Readme.md
src/: main.rs
src/convert/: constants.rs  document.rs  image.rs  mod.rs  names.rs  pdf_creation.rs
src/extract/: folder_contents.rs  mod.rs  uncompress.rs
src/models/: constants.rs  folder_entry.rs  image_wrapper.rs  mod.rs
