[package]
name = "manga-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "string"] }
printpdf = { version = "0.6.0", features = ["embedded_images"] }
tempfile = "3.8.0"
zip = "0.6.6"
